--- a/HotelListing/appsettings.json
+++ b/HotelListing/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "sqlConnection": "Data Source=DESKTOP-95PKL8P\\SQLEXPRESS;Initial Catalog=HotelListingDb;Integrated Security=SSPI;",
+
+
+
+  },
   "AllowedHosts": "*"
 }
